# ens-normalize-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: check_updates.yml  lint.yml  publish.yml  python-app.yml  python-publish.yml  test.yml
ens_normalize/: __init__.py  normalization.py
examples/: notebook.ipynb
research/: label_search.py
tests/: test_normalization.py
tools/updater/: package-lock.json  package.json  update-ens.js  update_ens.py
