[tool.poetry]
name = "ens-normalize"
version = "1.8.9"
description = "ES6 Ethereum Name Service (ENS) Name Normalizer"
authors = ["Jakub Karbowski <carbon225@proton.me>"]
readme = "README.md"
packages = [{include = "ens_normalize"}]

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2022.10.31"
pyunormalize = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
